# neo

./: .dockerignore  .gitignore  .neo.yml  AGENTS.md  CHANGELOG.md  CLAUDE.md  COMPETITOR-RESEARCH.md  Dockerfile  Dockerfile.runtime  LICENSE  Makefile  PLAN.md  README.md  SECURITY-REVIEW.md  SECURITY_AUDIT.md  TECHNICAL.md  go.mod  go.sum
apps/desktop/src-tauri/: .gitignore  Cargo.toml  build.rs  tauri.conf.json
apps/desktop/src-tauri/binaries/: .gitkeep
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/src/: bridge.rs  commands.rs  lib.rs  main.rs  tray.rs
commands/: ask.go  attach.go  backup.go  caddy.go  compose.go  compose_test.go  config.go  connect.go  dashboard.go  db.go  deploy.go  deploy_test.go  destroy.go  dev.go  dev_test.go  domain.go  domain_test.go  env.go  envfile.go  envfile_test.go  exec_unix.go  exec_windows.go  firewall.go  hooks.go  init.go  init_test.go  install.go  install_test.go  key.go  license.go  list.go  logs.go  manage.go  neoconfig.go  neoconfig_test.go  plus.go  prune.go  redirect.go  root.go  run.go  (+11 more)
neo-builder/: Dockerfile  go.mod  main.go
plans/: 2026-05-28-wildcard-tenant-https.md  2026-07-18-neo-desktop-tray-application.md  dynamic-rolling-pumpkin.md  expressive-bubbling-tarjan.md  federated-cuddling-salamander.md  free-license-required-remove-paid-tier.md  functional-sprouting-ladybug.md  glittery-puzzling-pond.md  logical-snuggling-pillow.md  some-issue-found-1-composed-curry.md  witty-brewing-bird.md  wobbly-moseying-babbage.md
site/: .neo.yml  (+10 more)
(+173 files in other folders)
