[package]
name = "neo-desktop"
version = "0.1.0"
description = "Neo Desktop — menu-bar / notification-area tray app for the Neo CLI"
authors = ["Solution Forest"]
edition = "2021"
rust-version = "1.77"
license = "MIT"

# The library holds all app logic so both the desktop binary and (future) mobile
# targets can share it. `main.rs` is a thin entry point that calls `run()`.
[lib]
name = "neo_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "image-png"] }
tauri-plugin-autostart = "2"
tauri-plugin-notification = "2"
tauri-plugin-process = "2"
tauri-plugin-shell = "2"
tauri-plugin-updater = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
log = "0.4"
# Only sync (oneshot correlation) and time (request timeouts) are needed; the
# async runtime itself is Tauri's (tokio-based).
tokio = { version = "1", features = ["sync", "time"] }

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-single-instance = "2"

# Release profile favors a small, well-optimized bundle. Devtools are compiled
# out of release builds because the `devtools` feature is intentionally not
# enabled (see plan: "Devtools disabled in production builds").
[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
